--- a/estilização/index.css
+++ b/estilização/index.css
@@ -14,7 +14,7 @@
 }
 
 nav{
-    color: goldenrod;    
+    color: white;    
 }
 
 nav a{
@@ -30,8 +30,8 @@ nav a:hover{
 }
 
 nav a:active {
-    background-color: rgb(30, 30, 31);
-    color: goldenrod;
+    background-color: goldenrod;
+    color: white;
 }
 
 .fundo img{
@@ -48,3 +48,25 @@ body{
     font-style: normal;
     background-color: black
   }
+
+  span{
+    color: white;
+  }
+  h3{
+    color: goldenrod;
+    font-size: 30px;
+  }
+
+  footer{
+    
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 10px;
+  }
+  footer a{
+    color: goldenrod;
+  }
+footer a:hover{
+color: white;
+}
