--- a/estilização/menu.css
+++ b/estilização/menu.css
@@ -5,17 +5,11 @@
     text-decoration: none;
 }
 
-html, body {
-    height: 100%;
-    min-height: 100vh; 
-}
-
 body {
     font-family: "SUSE", sans-serif;
-    background-color: black;
-    color: goldenrod;
-    display: flex;
-    flex-direction: column;
+    font-optical-sizing: auto;
+    font-style: normal;
+    background-color: rgb(30, 30, 31);
 }
 
 .container {
@@ -35,15 +29,12 @@ nav {
 nav a {
     color: goldenrod;
     font-size: 20px;
-    margin: 0 10px;
-    text-decoration: none;
 }
 
 nav a:hover {
     color: rgb(30, 30, 31);
     background-color: goldenrod;
     border-radius: 10px;
-    padding: 5px 10px;
 }
 
 nav a:active {
@@ -51,70 +42,78 @@ nav a:active {
     color: white;
 }
 
-#login {
-    display: flex;
-    flex-direction: column;
-    padding: 50px 20px; 
-    text-align: center;
-    flex: 1; 
+.hidden {
+    display: none;
 }
 
-#form-area {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin-bottom: 20px;
+#saque-info, #deposito-info {
+    margin-top: 20px;
 }
 
-#login-form {
-    display: flex;
-    flex-direction: column;
+#saque-info input, #deposito-info input {
     width: 100%;
-    max-width: 400px;
-    align-items: center;
-}
-
-input {
-    width: 100%;
-    height: 50px;
-    border-radius: 100px;
+    height: 40px;
+    border-radius: 5px;
+    padding: 0 10px;
+    border: 1px solid goldenrod;
     background-color: rgb(30, 30, 31);
-    border: 2px double goldenrod;
-    margin-top: 10px;
-    padding: 0 20px;
     color: goldenrod;
     font-size: 16px;
 }
 
-label {
-    font-size: 14px;
+#saque-info label, #deposito-info label {
+    color: goldenrod;
+    font-size: 18px;
+    margin-bottom: 10px;
+    display: block;
 }
 
-button[type="submit"] {
-    height: 50px; 
-    width: 150px; 
-    max-width: 200px; 
+#saldo {
+    background-color: white;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    font-size: 50px;
+}
+
+#options {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    padding: 20px;
+}
+
+button {
+    font-size: 18px;
+    height: 50px;
+    width: 150px;
+    max-width: 200px;
     border-radius: 100px;
     background-color: goldenrod;
     color: black;
     border: none;
     margin-top: 20px;
-    font-size: 18px;
     cursor: pointer;
 }
 
-button[type="submit"]:hover {
+button:hover {
     background-color: darkgoldenrod;
 }
 
-button[type="submit"]:active {
+button:active {
     background-color: rgb(30, 30, 31);
     color: goldenrod;
 }
 
 span {
     color: goldenrod;
+}
+
+h1, h2 {
+    color: goldenrod;
+    display: flex;
+    justify-content: center;
+    padding: 15px;
 }
 
 h3 {
@@ -130,12 +129,12 @@ h3 {
     background-color: rgb(30, 30, 31);
     padding: 20px;
     color: goldenrod;
-    margin-top: auto; 
+    margin-top: auto;
 }
 
 footer {
     display: flex;
-    flex-direction: column; 
+    flex-direction: column;
     align-items: center;
     text-align: center;
     width: 100%;
@@ -156,48 +155,63 @@ footer {
     color: white;
 }
 
-
 @media (max-width: 768px) {
     .container {
         flex-direction: column;
-        align-items: flex-start;
-        height: auto; 
+        height: auto;
+        text-align: center;
     }
 
     nav {
         margin-top: 10px;
     }
 
-    nav a {
-        font-size: 18px;
-        margin: 5px 0;
+    #options {
+        display: flex;
+        flex-direction: row;
+        
     }
 
-    #login {
-        padding: 30px 10px;
+    button {
+        width: 100px;
+        max-width: 300px;
+        font-size: 16px;
     }
 
-    input {
-        font-size: 14px;
+    #saldo {
+        font-size: 40px;
     }
 
-    button[type="submit"] {
-        font-size: 18px;
+    h1, h2 {
+        font-size: 24px;
+        padding: 10px;
     }
 }
 
 @media (max-width: 480px) {
     nav a {
-        font-size: 16px;
+        font-size: 14px;
     }
 
     h3 {
+        font-size: 24px;
+    }
+
+    button {
+        width: 100px;
+        max-width: 200px;
+        font-size: 14px;
+    }
+
+    #saldo {
         font-size: 30px;
     }
 
-    button[type="submit"] {
-        width: 150px;
-        max-width: 150px;
+    #saque-info input, #deposito-info input {
         font-size: 14px;
+    }
+
+    #saque-info label, #deposito-info label {
+        font-size: 16px;
     }
 }
